--- a/Overlay - Giveaway/GiveawayConfig.json
+++ b/Overlay - Giveaway/GiveawayConfig.json
@@ -1,4 +1,4 @@
 ﻿{
-  "overlayThemeName": "Streamlabs",
-  "overlayLanguage": "German"
+  "overlayThemeName": "AnkhBot",
+  "overlayLanguage": "English"
 }
